añado el footer generico, header generico y navbar generico. Al igual que varios iconos y imagenes default y la pagina default para visualizar productos (incompleta por ahora)

--- a/src/main/resources/templates/blocked.peb.html
+++ b/src/main/resources/templates/blocked.peb.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{error.title}}</title>
-    <link rel="stylesheet" href="error.css">
+    <link rel="stylesheet" href="/error.css">
 </head>
 <body>
-    <div class="container">
-        <div class="icon">🔒</div>
-        <div class="error-code">{{error.status}}</div>
-        <h1>{{error.title}}</h1>
-        <p>
-            {{error.mensage}}
-        </p>
-        <a href="/" class="btn">Ir al sitio principal</a>
-        <div class="info-box">
-            <p>Si crees que esto es un error, contacta al administrador del sistema.</p>
-        </div>
+<div class="container">
+    <div class="icon">🔒</div>
+    <div class="error-code">{{error.status}}</div>
+    <h1>{{error.title}}</h1>
+    <p>
+        {{error.mensage}}
+    </p>
+    <a href="/" class="btn">Ir al sitio principal</a>
+    <div class="info-box">
+        <p>Si crees que esto es un error, contacta al administrador del sistema.</p>
     </div>
+</div>
 </body>
 </html>
