--- a/src/main/resources/templates/web/productos/lista.peb.html
+++ b/src/main/resources/templates/web/productos/lista.peb.html
@@ -9,7 +9,7 @@
         </button>
     </div>
     <div id="grid-productos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        {% if not productos %}
+        {% if productos is empty %}
         <div class="alert alert-warning">No se encontraron productos.</div>
         {% endif %}
         {% for product in productos %}
