--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -61,23 +61,23 @@
         {% if isAdmin %}
         <div class="bg-custom-secondary text-white py-1 shadow-sm">
             <nav class="d-flex gap-3 overflow-auto ms-6" style="white-space: nowrap; scrollbar-width: none;">
-                <a class="nav-link text-white small" href="#">Usuarios:</a>
-                <a class="nav-link text-white small" href="#">Ventas y envios:</a>
+                <a class="nav-link text-white small" href="/usuarios">Usuarios:</a>
+                <a class="nav-link text-white small" href="/ventas">Ventas y envios:</a>
             </nav>
         </div>
         {% endif %}
         {% if isUser %}
         <div class="bg-custom-secondary text-white py-1 shadow-sm">
             <nav class="d-flex gap-3 overflow-auto ms-6" style="white-space: nowrap; scrollbar-width: none;">
-                <a class="nav-link text-white small" href="#">Pedidos:</a>
+                <a class="nav-link text-white small" href="/auth/me/pedidos">Pedidos:</a>
             </nav>
         </div>
         {% endif %}
         {% if isManager %}
         <div class="bg-custom-secondary text-white py-1 shadow-sm">
             <nav class="d-flex gap-3 overflow-auto ms-6" style="white-space: nowrap; scrollbar-width: none;">
-                <a class="nav-link text-white small" href="#">Mis productos:</a>
-                <a class="nav-link text-white small" href="#">Ventas y envios:</a>
+                <a class="nav-link text-white small" href="/auth/me/productos">Mis productos:</a>
+                <a class="nav-link text-white small" href="/auth/me/ventas">Ventas y envios:</a>
             </nav>
         </div>
         {% endif %}
